Fix alignment issue with principal image

--- a/src/styl/imports/media-queries/index.styl
+++ b/src/styl/imports/media-queries/index.styl
@@ -85,6 +85,7 @@
 			
 			img
 				width 85%
+				margin 0 auto
 		
 		div.message
 			padding 0 0 30px 0
